@@ -1,4 +1,4 @@
-/**
+/*
  * Licensed to the Apache Software Foundation (ASF) under one or more
  * contributor license agreements.  See the NOTICE file distributed with
  * this work for additional information regarding copyright ownership.
@@ -18,21 +18,35 @@ package org.apache.camel.component.infinispan;
 
 import java.util.HashMap;
 import java.util.Map;
+import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.TimeUnit;
+import java.util.function.BiFunction;
 
+import org.apache.camel.BindToRegistry;
 import org.apache.camel.Exchange;
 import org.apache.camel.Processor;
 import org.apache.camel.builder.RouteBuilder;
-import org.infinispan.commons.util.concurrent.NotifyingFuture;
-import org.junit.Test;
+import org.apache.camel.component.infinispan.util.Condition;
+import org.infinispan.Cache;
+import org.infinispan.stats.Stats;
+import org.junit.jupiter.api.Test;
+
+import static org.apache.camel.component.infinispan.util.Wait.waitFor;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertFalse;
+import static org.junit.jupiter.api.Assertions.assertNull;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 
 public class InfinispanProducerTest extends InfinispanTestSupport {
 
     private static final String COMMAND_VALUE = "commandValue";
     private static final String COMMAND_KEY = "commandKey1";
-    private static final long LIFESPAN_TIME = 5;
+    private static final long LIFESPAN_TIME = 100;
     private static final long LIFESPAN_FOR_MAX_IDLE = -1;
-    private static final long MAX_IDLE_TIME = 3;
+    private static final long MAX_IDLE_TIME = 200;
+
+    @BindToRegistry("mappingFunction")
+    BiFunction<String, String, String> comp = (k, v) -> v + "replay";
 
     @Test
     public void keyAndValueArePublishedWithDefaultOperation() throws Exception {
@@ -45,9 +59,9 @@ public class InfinispanProducerTest extends InfinispanTestSupport {
         });
 
         Object value = currentCache().get(KEY_ONE);
-        assertEquals(value.toString(), VALUE_ONE);
+        assertEquals(VALUE_ONE, value.toString());
     }
-    
+
     @Test
     public void cacheSizeTest() throws Exception {
         currentCache().put(KEY_ONE, VALUE_ONE);
@@ -56,12 +70,12 @@ public class InfinispanProducerTest extends InfinispanTestSupport {
         Exchange exchange = template.request("direct:size", new Processor() {
             @Override
             public void process(Exchange exchange) throws Exception {
-                exchange.getIn().setHeader(InfinispanConstants.OPERATION, InfinispanConstants.SIZE);
+                exchange.getIn().setHeader(InfinispanConstants.OPERATION, InfinispanOperation.SIZE);
             }
         });
 
-        assertEquals(exchange.getIn().getHeader(InfinispanConstants.RESULT, Integer.class), new Integer(2));
-        assertNotEquals(exchange.getIn().getHeader(InfinispanConstants.RESULT, Integer.class), new Integer(4));
+        Integer cacheSize = exchange.getIn().getBody(Integer.class);
+        assertEquals(cacheSize, Integer.valueOf(2));
     }
 
     @Test
@@ -71,17 +85,17 @@ public class InfinispanProducerTest extends InfinispanTestSupport {
             public void process(Exchange exchange) throws Exception {
                 exchange.getIn().setHeader(InfinispanConstants.KEY, KEY_ONE);
                 exchange.getIn().setHeader(InfinispanConstants.VALUE, VALUE_ONE);
-                exchange.getIn().setHeader(InfinispanConstants.OPERATION, InfinispanConstants.PUT);
+                exchange.getIn().setHeader(InfinispanConstants.OPERATION, InfinispanOperation.PUT);
             }
         });
 
         Object value = currentCache().get(KEY_ONE);
-        assertEquals(value.toString(), VALUE_ONE);
+        assertEquals(VALUE_ONE, value.toString());
     }
-    
+
     @Test
     public void publishKeyAndValueAsync() throws Exception {
-        Exchange exchange = template.send("direct:putasync", new Processor() {
+        final Exchange exchange = template.send("direct:putasync", new Processor() {
             @Override
             public void process(Exchange exchange) throws Exception {
                 exchange.getIn().setHeader(InfinispanConstants.KEY, KEY_ONE);
@@ -89,458 +103,377 @@ public class InfinispanProducerTest extends InfinispanTestSupport {
             }
         });
 
-        Thread.sleep(10000);
-        NotifyingFuture resultPutAsync = exchange.getIn().getHeader(InfinispanConstants.RESULT, NotifyingFuture.class);
-        assertEquals(Boolean.TRUE, resultPutAsync.isDone());
-        
-        Object value = currentCache().get(KEY_ONE);
-        assertEquals(value.toString(), VALUE_ONE);      
+        waitFor(new Condition() {
+            @Override
+            public boolean isSatisfied() throws Exception {
+                CompletableFuture<Object> resultPutAsync = exchange.getIn().getBody(CompletableFuture.class);
+                Object value = currentCache().get(KEY_ONE);
+                return resultPutAsync.isDone() && value.toString().equals(VALUE_ONE);
+            }
+        }, 5000);
     }
 
     @Test
     public void publishKeyAndValueAsyncWithLifespan() throws Exception {
-        Exchange exchange = template.send("direct:putasync", new Processor() {
+        final Exchange exchange = template.send("direct:putasync", new Processor() {
             @Override
             public void process(Exchange exchange) throws Exception {
                 exchange.getIn().setHeader(InfinispanConstants.KEY, KEY_ONE);
                 exchange.getIn().setHeader(InfinispanConstants.VALUE, VALUE_ONE);
-                exchange.getIn().setHeader(InfinispanConstants.LIFESPAN_TIME, new Long(LIFESPAN_TIME));
-                exchange.getIn().setHeader(InfinispanConstants.LIFESPAN_TIME_UNIT, TimeUnit.SECONDS.toString());
+                exchange.getIn().setHeader(InfinispanConstants.LIFESPAN_TIME, Long.valueOf(LIFESPAN_TIME));
+                exchange.getIn().setHeader(InfinispanConstants.LIFESPAN_TIME_UNIT, TimeUnit.MILLISECONDS.toString());
             }
         });
 
-        Thread.sleep(1000);
-        NotifyingFuture resultPutAsync = exchange.getIn().getHeader(InfinispanConstants.RESULT, NotifyingFuture.class);
-        assertEquals(Boolean.TRUE, resultPutAsync.isDone());
-        
-        Object value = currentCache().get(KEY_ONE);
-        assertEquals(value.toString(), VALUE_ONE);  
-        
-        Thread.sleep(6000);
-        exchange = template.send("direct:get", new Processor() {
+        waitFor(new Condition() {
             @Override
-            public void process(Exchange exchange) throws Exception {
-                exchange.getIn().setHeader(InfinispanConstants.KEY, KEY_ONE);
+            public boolean isSatisfied() throws Exception {
+                CompletableFuture<Object> resultPutAsync = exchange.getIn().getBody(CompletableFuture.class);
+                Object value = currentCache().get(KEY_ONE);
+                return resultPutAsync.isDone() && value.equals(VALUE_ONE);
             }
-        });
-        String resultGet = exchange.getIn().getHeader(InfinispanConstants.RESULT, String.class);
-        assertEquals(null, resultGet);
+        }, 1000);
+
+        waitForNullValue(KEY_ONE);
     }
-    
+
     @Test
     public void publishKeyAndValueAsyncWithLifespanAndMaxIdle() throws Exception {
-        Exchange exchange = template.send("direct:putasync", new Processor() {
+        final Exchange exchange = template.send("direct:putasync", new Processor() {
             @Override
             public void process(Exchange exchange) throws Exception {
                 exchange.getIn().setHeader(InfinispanConstants.KEY, KEY_ONE);
                 exchange.getIn().setHeader(InfinispanConstants.VALUE, VALUE_ONE);
-                exchange.getIn().setHeader(InfinispanConstants.LIFESPAN_TIME, new Long(LIFESPAN_FOR_MAX_IDLE));
-                exchange.getIn().setHeader(InfinispanConstants.LIFESPAN_TIME_UNIT, TimeUnit.SECONDS.toString());
-                exchange.getIn().setHeader(InfinispanConstants.MAX_IDLE_TIME, new Long(MAX_IDLE_TIME));
-                exchange.getIn().setHeader(InfinispanConstants.MAX_IDLE_TIME_UNIT, TimeUnit.SECONDS.toString());
+                exchange.getIn().setHeader(InfinispanConstants.LIFESPAN_TIME, Long.valueOf(LIFESPAN_FOR_MAX_IDLE));
+                exchange.getIn().setHeader(InfinispanConstants.LIFESPAN_TIME_UNIT, TimeUnit.MILLISECONDS.toString());
+                exchange.getIn().setHeader(InfinispanConstants.MAX_IDLE_TIME, Long.valueOf(MAX_IDLE_TIME));
+                exchange.getIn().setHeader(InfinispanConstants.MAX_IDLE_TIME_UNIT, TimeUnit.MILLISECONDS.toString());
             }
         });
 
-        Thread.sleep(1000);
-        NotifyingFuture resultPutAsync = exchange.getIn().getHeader(InfinispanConstants.RESULT, NotifyingFuture.class);
-        assertEquals(Boolean.TRUE, resultPutAsync.isDone());
-        
-        Object value = currentCache().get(KEY_ONE);
-        assertEquals(value.toString(), VALUE_ONE);  
-        
-        Thread.sleep(10000);
-        exchange = template.send("direct:get", new Processor() {
+        waitFor(new Condition() {
             @Override
-            public void process(Exchange exchange) throws Exception {
-                exchange.getIn().setHeader(InfinispanConstants.KEY, KEY_ONE);
+            public boolean isSatisfied() throws Exception {
+                CompletableFuture<Object> resultPutAsync = exchange.getIn().getBody(CompletableFuture.class);
+                return resultPutAsync.isDone() && currentCache().get(KEY_ONE).toString().equals(VALUE_ONE);
             }
-        });
-        String resultGet = exchange.getIn().getHeader(InfinispanConstants.RESULT, String.class);
-        assertEquals(null, resultGet);
+        }, 1000);
+
+        Thread.sleep(300);
+        waitForNullValue(KEY_ONE);
     }
-    
+
     @Test
     public void publishMapNormal() throws Exception {
         template.send("direct:start", new Processor() {
             @Override
             public void process(Exchange exchange) throws Exception {
-                Map<String, String> map = new HashMap<String, String>();
+                Map<String, String> map = new HashMap<>();
                 map.put(KEY_ONE, VALUE_ONE);
                 map.put(KEY_TWO, VALUE_TWO);
                 exchange.getIn().setHeader(InfinispanConstants.MAP, map);
-                exchange.getIn().setHeader(InfinispanConstants.OPERATION, InfinispanConstants.PUT_ALL);
+                exchange.getIn().setHeader(InfinispanConstants.OPERATION, InfinispanOperation.PUTALL);
             }
         });
 
-        assertEquals(currentCache().size(), 2);
+        assertEquals(2, currentCache().size());
         Object value = currentCache().get(KEY_ONE);
-        assertEquals(value.toString(), VALUE_ONE);
+        assertEquals(VALUE_ONE, value.toString());
         value = currentCache().get(KEY_TWO);
-        assertEquals(value.toString(), VALUE_TWO);
+        assertEquals(VALUE_TWO, value.toString());
     }
-    
+
     @Test
     public void publishMapWithLifespan() throws Exception {
         template.send("direct:start", new Processor() {
             @Override
             public void process(Exchange exchange) throws Exception {
-                Map<String, String> map = new HashMap<String, String>();
+                Map<String, String> map = new HashMap<>();
                 map.put(KEY_ONE, VALUE_ONE);
                 map.put(KEY_TWO, VALUE_TWO);
                 exchange.getIn().setHeader(InfinispanConstants.MAP, map);
-                exchange.getIn().setHeader(InfinispanConstants.OPERATION, InfinispanConstants.PUT_ALL);
-                exchange.getIn().setHeader(InfinispanConstants.LIFESPAN_TIME, new Long(LIFESPAN_TIME));
-                exchange.getIn().setHeader(InfinispanConstants.LIFESPAN_TIME_UNIT, TimeUnit.SECONDS.toString());
+                exchange.getIn().setHeader(InfinispanConstants.OPERATION, InfinispanOperation.PUTALL);
+                exchange.getIn().setHeader(InfinispanConstants.LIFESPAN_TIME, Long.valueOf(LIFESPAN_TIME));
+                exchange.getIn().setHeader(InfinispanConstants.LIFESPAN_TIME_UNIT, TimeUnit.MILLISECONDS.toString());
             }
         });
 
-        assertEquals(currentCache().size(), 2);
+        assertEquals(2, currentCache().size());
         Object value = currentCache().get(KEY_ONE);
-        assertEquals(value.toString(), VALUE_ONE);
+        assertEquals(VALUE_ONE, value.toString());
         value = currentCache().get(KEY_TWO);
-        assertEquals(value.toString(), VALUE_TWO);
-        
-        Thread.sleep(LIFESPAN_TIME * 1000);
-        
-        Exchange exchange = template.send("direct:get", new Processor() {
-            @Override
-            public void process(Exchange exchange) throws Exception {
-                exchange.getIn().setHeader(InfinispanConstants.KEY, KEY_ONE);
-            }
-        });
-        String resultGet = exchange.getIn().getHeader(InfinispanConstants.RESULT, String.class);
-        assertEquals(null, resultGet);
-        
-        exchange = template.send("direct:get", new Processor() {
-            @Override
-            public void process(Exchange exchange) throws Exception {
-                exchange.getIn().setHeader(InfinispanConstants.KEY, KEY_TWO);
-            }
-        });
-        resultGet = exchange.getIn().getHeader(InfinispanConstants.RESULT, String.class);
-        assertEquals(null, resultGet);
+        assertEquals(VALUE_TWO, value.toString());
+
+        waitForNullValue(KEY_ONE);
     }
-    
+
     @Test
     public void publishMapWithLifespanAndMaxIdleTime() throws Exception {
         template.send("direct:start", new Processor() {
             @Override
             public void process(Exchange exchange) throws Exception {
-                Map<String, String> map = new HashMap<String, String>();
+                Map<String, String> map = new HashMap<>();
                 map.put(KEY_ONE, VALUE_ONE);
                 map.put(KEY_TWO, VALUE_TWO);
                 exchange.getIn().setHeader(InfinispanConstants.MAP, map);
-                exchange.getIn().setHeader(InfinispanConstants.OPERATION, InfinispanConstants.PUT_ALL);
-                exchange.getIn().setHeader(InfinispanConstants.LIFESPAN_TIME, new Long(LIFESPAN_FOR_MAX_IDLE));
-                exchange.getIn().setHeader(InfinispanConstants.LIFESPAN_TIME_UNIT, TimeUnit.SECONDS.toString());
-                exchange.getIn().setHeader(InfinispanConstants.MAX_IDLE_TIME, new Long(MAX_IDLE_TIME));
-                exchange.getIn().setHeader(InfinispanConstants.MAX_IDLE_TIME_UNIT, TimeUnit.SECONDS.toString());
+                exchange.getIn().setHeader(InfinispanConstants.OPERATION, InfinispanOperation.PUTALL);
+                exchange.getIn().setHeader(InfinispanConstants.LIFESPAN_TIME, Long.valueOf(LIFESPAN_FOR_MAX_IDLE));
+                exchange.getIn().setHeader(InfinispanConstants.LIFESPAN_TIME_UNIT, TimeUnit.MILLISECONDS.toString());
+                exchange.getIn().setHeader(InfinispanConstants.MAX_IDLE_TIME, Long.valueOf(MAX_IDLE_TIME));
+                exchange.getIn().setHeader(InfinispanConstants.MAX_IDLE_TIME_UNIT, TimeUnit.MILLISECONDS.toString());
             }
         });
 
-        assertEquals(currentCache().size(), 2);
-        
-        Thread.sleep(10000);
-        
-        Exchange exchange = template.send("direct:get", new Processor() {
-            @Override
-            public void process(Exchange exchange) throws Exception {
-                exchange.getIn().setHeader(InfinispanConstants.KEY, KEY_ONE);
-            }
-        });
-        String resultGet = exchange.getIn().getHeader(InfinispanConstants.RESULT, String.class);
-        assertEquals(null, resultGet);
-        
-        exchange = template.send("direct:get", new Processor() {
-            @Override
-            public void process(Exchange exchange) throws Exception {
-                exchange.getIn().setHeader(InfinispanConstants.KEY, KEY_TWO);
-            }
-        });
-        resultGet = exchange.getIn().getHeader(InfinispanConstants.RESULT, String.class);
-        assertEquals(null, resultGet);
+        assertEquals(2, currentCache().size());
+
+        Thread.sleep(300);
+        waitForNullValue(KEY_TWO);
     }
-    
+
     @Test
     public void publishMapNormalAsync() throws Exception {
         template.send("direct:putallasync", new Processor() {
             @Override
             public void process(Exchange exchange) throws Exception {
-                Map<String, String> map = new HashMap<String, String>();
+                Map<String, String> map = new HashMap<>();
                 map.put(KEY_ONE, VALUE_ONE);
                 map.put(KEY_TWO, VALUE_TWO);
                 exchange.getIn().setHeader(InfinispanConstants.MAP, map);
             }
         });
-        
+
         Thread.sleep(100);
-        assertEquals(currentCache().size(), 2);
+        assertEquals(2, currentCache().size());
         Object value = currentCache().get(KEY_ONE);
-        assertEquals(value.toString(), VALUE_ONE);
+        assertEquals(VALUE_ONE, value.toString());
         value = currentCache().get(KEY_TWO);
-        assertEquals(value.toString(), VALUE_TWO);
+        assertEquals(VALUE_TWO, value.toString());
     }
-    
+
     @Test
     public void publishMapWithLifespanAsync() throws Exception {
         template.send("direct:putallasync", new Processor() {
             @Override
             public void process(Exchange exchange) throws Exception {
-                Map<String, String> map = new HashMap<String, String>();
+                Map<String, String> map = new HashMap<>();
                 map.put(KEY_ONE, VALUE_ONE);
                 map.put(KEY_TWO, VALUE_TWO);
                 exchange.getIn().setHeader(InfinispanConstants.MAP, map);
-                exchange.getIn().setHeader(InfinispanConstants.OPERATION, InfinispanConstants.PUT_ALL);
-                exchange.getIn().setHeader(InfinispanConstants.LIFESPAN_TIME, new Long(LIFESPAN_TIME));
-                exchange.getIn().setHeader(InfinispanConstants.LIFESPAN_TIME_UNIT, TimeUnit.SECONDS.toString());
+                exchange.getIn().setHeader(InfinispanConstants.OPERATION, InfinispanOperation.PUTALL);
+                exchange.getIn().setHeader(InfinispanConstants.LIFESPAN_TIME, Long.valueOf(LIFESPAN_TIME));
+                exchange.getIn().setHeader(InfinispanConstants.LIFESPAN_TIME_UNIT, TimeUnit.MILLISECONDS.toString());
             }
         });
 
-        Thread.sleep(100);
-        assertEquals(currentCache().size(), 2);
-        Object value = currentCache().get(KEY_ONE);
-        assertEquals(value.toString(), VALUE_ONE);
-        value = currentCache().get(KEY_TWO);
-        assertEquals(value.toString(), VALUE_TWO);
-        
-        Thread.sleep(LIFESPAN_TIME * 1000);
-        
-        Exchange exchange = template.send("direct:get", new Processor() {
+        waitFor(new Condition() {
             @Override
-            public void process(Exchange exchange) throws Exception {
-                exchange.getIn().setHeader(InfinispanConstants.KEY, KEY_ONE);
+            public boolean isSatisfied() throws Exception {
+                Object valueOne = currentCache().get(KEY_ONE);
+                Object valueTwo = currentCache().get(KEY_TWO);
+                return valueOne.equals(VALUE_ONE) && valueTwo.equals(VALUE_TWO) && currentCache().size() == 2;
             }
-        });
-        String resultGet = exchange.getIn().getHeader(InfinispanConstants.RESULT, String.class);
-        assertEquals(null, resultGet);
-        
-        exchange = template.send("direct:get", new Processor() {
-            @Override
-            public void process(Exchange exchange) throws Exception {
-                exchange.getIn().setHeader(InfinispanConstants.KEY, KEY_TWO);
-            }
-        });
-        resultGet = exchange.getIn().getHeader(InfinispanConstants.RESULT, String.class);
-        assertEquals(null, resultGet);
+        }, 100);
+
+        waitForNullValue(KEY_ONE);
     }
-    
+
     @Test
     public void publishMapWithLifespanAndMaxIdleTimeAsync() throws Exception {
         template.send("direct:putallasync", new Processor() {
             @Override
             public void process(Exchange exchange) throws Exception {
-                Map<String, String> map = new HashMap<String, String>();
+                Map<String, String> map = new HashMap<>();
                 map.put(KEY_ONE, VALUE_ONE);
                 map.put(KEY_TWO, VALUE_TWO);
                 exchange.getIn().setHeader(InfinispanConstants.MAP, map);
-                exchange.getIn().setHeader(InfinispanConstants.OPERATION, InfinispanConstants.PUT_ALL);
-                exchange.getIn().setHeader(InfinispanConstants.LIFESPAN_TIME, new Long(LIFESPAN_FOR_MAX_IDLE));
-                exchange.getIn().setHeader(InfinispanConstants.LIFESPAN_TIME_UNIT, TimeUnit.SECONDS.toString());
-                exchange.getIn().setHeader(InfinispanConstants.MAX_IDLE_TIME, new Long(MAX_IDLE_TIME));
-                exchange.getIn().setHeader(InfinispanConstants.MAX_IDLE_TIME_UNIT, TimeUnit.SECONDS.toString());
+                exchange.getIn().setHeader(InfinispanConstants.OPERATION, InfinispanOperation.PUTALL);
+                exchange.getIn().setHeader(InfinispanConstants.LIFESPAN_TIME, Long.valueOf(LIFESPAN_FOR_MAX_IDLE));
+                exchange.getIn().setHeader(InfinispanConstants.LIFESPAN_TIME_UNIT, TimeUnit.MILLISECONDS.toString());
+                exchange.getIn().setHeader(InfinispanConstants.MAX_IDLE_TIME, Long.valueOf(MAX_IDLE_TIME));
+                exchange.getIn().setHeader(InfinispanConstants.MAX_IDLE_TIME_UNIT, TimeUnit.MILLISECONDS.toString());
             }
         });
-        
-        Thread.sleep(100);
-        assertEquals(currentCache().size(), 2);
-        
-        Thread.sleep(10000);
-        
-        Exchange exchange = template.send("direct:get", new Processor() {
+
+        waitFor(new Condition() {
             @Override
-            public void process(Exchange exchange) throws Exception {
-                exchange.getIn().setHeader(InfinispanConstants.KEY, KEY_ONE);
+            public boolean isSatisfied() throws Exception {
+                return currentCache().size() == 2;
             }
-        });
-        String resultGet = exchange.getIn().getHeader(InfinispanConstants.RESULT, String.class);
-        assertEquals(null, resultGet);
-        
-        exchange = template.send("direct:get", new Processor() {
-            @Override
-            public void process(Exchange exchange) throws Exception {
-                exchange.getIn().setHeader(InfinispanConstants.KEY, KEY_TWO);
-            }
-        });
-        resultGet = exchange.getIn().getHeader(InfinispanConstants.RESULT, String.class);
-        assertEquals(null, resultGet);
+        }, 100);
+
+        Thread.sleep(300);
+
+        waitForNullValue(KEY_ONE);
+        waitForNullValue(KEY_TWO);
     }
-    
+
     @Test
     public void putIfAbsentAlreadyExists() throws Exception {
         currentCache().put(KEY_ONE, VALUE_ONE);
-        
+
         template.send("direct:putifabsent", new Processor() {
             @Override
             public void process(Exchange exchange) throws Exception {
                 exchange.getIn().setHeader(InfinispanConstants.KEY, KEY_ONE);
                 exchange.getIn().setHeader(InfinispanConstants.VALUE, VALUE_TWO);
-                exchange.getIn().setHeader(InfinispanConstants.OPERATION, InfinispanConstants.PUT_IF_ABSENT);
+                exchange.getIn().setHeader(InfinispanConstants.OPERATION, InfinispanOperation.PUTIFABSENT);
             }
         });
 
         Object value = currentCache().get(KEY_ONE);
-        assertEquals(value.toString(), VALUE_ONE);
-        assertEquals(currentCache().size(), 1);
+        assertEquals(VALUE_ONE, value.toString());
+        assertEquals(1, currentCache().size());
     }
-    
+
     @Test
     public void putIfAbsentNotExists() throws Exception {
         currentCache().put(KEY_ONE, VALUE_ONE);
-        
+
         template.send("direct:putifabsent", new Processor() {
             @Override
             public void process(Exchange exchange) throws Exception {
                 exchange.getIn().setHeader(InfinispanConstants.KEY, KEY_TWO);
                 exchange.getIn().setHeader(InfinispanConstants.VALUE, VALUE_TWO);
-                exchange.getIn().setHeader(InfinispanConstants.OPERATION, InfinispanConstants.PUT_IF_ABSENT);
+                exchange.getIn().setHeader(InfinispanConstants.OPERATION, InfinispanOperation.PUTIFABSENT);
             }
         });
 
         Object value = currentCache().get(KEY_TWO);
-        assertEquals(value.toString(), VALUE_TWO);
-        assertEquals(currentCache().size(), 2);
+        assertEquals(VALUE_TWO, value.toString());
+        assertEquals(2, currentCache().size());
     }
-    
+
     @Test
     public void putIfAbsentKeyAndValueAsync() throws Exception {
-        Exchange exchange = template.send("direct:putifabsentasync", new Processor() {
+        final Exchange exchange = template.send("direct:putifabsentasync", new Processor() {
             @Override
             public void process(Exchange exchange) throws Exception {
                 exchange.getIn().setHeader(InfinispanConstants.KEY, KEY_ONE);
                 exchange.getIn().setHeader(InfinispanConstants.VALUE, VALUE_ONE);
             }
         });
-
-        Thread.sleep(10000);
-        NotifyingFuture resultPutAsync = exchange.getIn().getHeader(InfinispanConstants.RESULT, NotifyingFuture.class);
-        assertEquals(Boolean.TRUE, resultPutAsync.isDone());
-        
-        Object value = currentCache().get(KEY_ONE);
-        assertEquals(value.toString(), VALUE_ONE);      
+        waitFor(new Condition() {
+            @Override
+            public boolean isSatisfied() throws Exception {
+                CompletableFuture<Object> resultPutAsync = exchange.getIn().getBody(CompletableFuture.class);
+                return resultPutAsync.isDone() && currentCache().get(KEY_ONE).equals(VALUE_ONE);
+            }
+        }, 2000);
     }
 
     @Test
     public void putIfAbsentKeyAndValueAsyncWithLifespan() throws Exception {
-        Exchange exchange = template.send("direct:putifabsentasync", new Processor() {
+        final Exchange exchange = template.send("direct:putifabsentasync", new Processor() {
             @Override
             public void process(Exchange exchange) throws Exception {
                 exchange.getIn().setHeader(InfinispanConstants.KEY, KEY_ONE);
                 exchange.getIn().setHeader(InfinispanConstants.VALUE, VALUE_ONE);
-                exchange.getIn().setHeader(InfinispanConstants.LIFESPAN_TIME, new Long(LIFESPAN_TIME));
-                exchange.getIn().setHeader(InfinispanConstants.LIFESPAN_TIME_UNIT, TimeUnit.SECONDS.toString());
+                exchange.getIn().setHeader(InfinispanConstants.LIFESPAN_TIME, Long.valueOf(LIFESPAN_TIME));
+                exchange.getIn().setHeader(InfinispanConstants.LIFESPAN_TIME_UNIT, TimeUnit.MILLISECONDS.toString());
             }
         });
 
-        Thread.sleep(1000);
-        NotifyingFuture resultPutAsync = exchange.getIn().getHeader(InfinispanConstants.RESULT, NotifyingFuture.class);
-        assertEquals(Boolean.TRUE, resultPutAsync.isDone());
-        
-        Object value = currentCache().get(KEY_ONE);
-        assertEquals(value.toString(), VALUE_ONE);  
-        
-        Thread.sleep(6000);
-        exchange = template.send("direct:get", new Processor() {
+        waitFor(new Condition() {
             @Override
-            public void process(Exchange exchange) throws Exception {
-                exchange.getIn().setHeader(InfinispanConstants.KEY, KEY_ONE);
+            public boolean isSatisfied() throws Exception {
+                CompletableFuture<Object> resultPutAsync = exchange.getIn().getBody(CompletableFuture.class);
+                return resultPutAsync.isDone() && currentCache().get(KEY_ONE).equals(VALUE_ONE);
             }
-        });
-        String resultGet = exchange.getIn().getHeader(InfinispanConstants.RESULT, String.class);
-        assertEquals(null, resultGet);
+        }, 100);
+
+        waitForNullValue(KEY_ONE);
     }
-    
+
     @Test
     public void putIfAbsentKeyAndValueAsyncWithLifespanAndMaxIdle() throws Exception {
-        Exchange exchange = template.send("direct:putifabsentasync", new Processor() {
+        final Exchange exchange = template.send("direct:putifabsentasync", new Processor() {
             @Override
             public void process(Exchange exchange) throws Exception {
                 exchange.getIn().setHeader(InfinispanConstants.KEY, KEY_ONE);
                 exchange.getIn().setHeader(InfinispanConstants.VALUE, VALUE_ONE);
-                exchange.getIn().setHeader(InfinispanConstants.LIFESPAN_TIME, new Long(LIFESPAN_FOR_MAX_IDLE));
-                exchange.getIn().setHeader(InfinispanConstants.LIFESPAN_TIME_UNIT, TimeUnit.SECONDS.toString());
-                exchange.getIn().setHeader(InfinispanConstants.MAX_IDLE_TIME, new Long(MAX_IDLE_TIME));
-                exchange.getIn().setHeader(InfinispanConstants.MAX_IDLE_TIME_UNIT, TimeUnit.SECONDS.toString());
+                exchange.getIn().setHeader(InfinispanConstants.LIFESPAN_TIME, Long.valueOf(LIFESPAN_FOR_MAX_IDLE));
+                exchange.getIn().setHeader(InfinispanConstants.LIFESPAN_TIME_UNIT, TimeUnit.MILLISECONDS.toString());
+                exchange.getIn().setHeader(InfinispanConstants.MAX_IDLE_TIME, Long.valueOf(MAX_IDLE_TIME));
+                exchange.getIn().setHeader(InfinispanConstants.MAX_IDLE_TIME_UNIT, TimeUnit.MILLISECONDS.toString());
             }
         });
 
-        Thread.sleep(1000);
-        NotifyingFuture resultPutAsync = exchange.getIn().getHeader(InfinispanConstants.RESULT, NotifyingFuture.class);
-        assertEquals(Boolean.TRUE, resultPutAsync.isDone());
-        
-        Object value = currentCache().get(KEY_ONE);
-        assertEquals(value.toString(), VALUE_ONE);  
-        
-        Thread.sleep(10000);
-        exchange = template.send("direct:get", new Processor() {
+        waitFor(new Condition() {
             @Override
-            public void process(Exchange exchange) throws Exception {
-                exchange.getIn().setHeader(InfinispanConstants.KEY, KEY_ONE);
+            public boolean isSatisfied() throws Exception {
+                CompletableFuture<Object> resultPutAsync = exchange.getIn().getBody(CompletableFuture.class);
+                return resultPutAsync.isDone() && currentCache().get(KEY_ONE).equals(VALUE_ONE);
             }
-        });
-        String resultGet = exchange.getIn().getHeader(InfinispanConstants.RESULT, String.class);
-        assertEquals(null, resultGet);
+        }, 500);
+
+        Thread.sleep(300);
+        waitForNullValue(KEY_ONE);
     }
-    
+
     @Test
     public void notContainsKeyTest() throws Exception {
         currentCache().put(KEY_ONE, VALUE_ONE);
-        
+
         Exchange exchange = template.request("direct:containskey", new Processor() {
             @Override
             public void process(Exchange exchange) throws Exception {
                 exchange.getIn().setHeader(InfinispanConstants.KEY, KEY_TWO);
-                exchange.getIn().setHeader(InfinispanConstants.OPERATION, InfinispanConstants.CONTAINS_KEY);
+                exchange.getIn().setHeader(InfinispanConstants.OPERATION, InfinispanOperation.CONTAINSKEY);
             }
         });
 
-        assertEquals(exchange.getIn().getHeader(InfinispanConstants.RESULT, Boolean.class), false);
+        Boolean cacheContainsKey = exchange.getIn().getBody(Boolean.class);
+        assertFalse(cacheContainsKey);
     }
-    
+
     @Test
     public void containsKeyTest() throws Exception {
         currentCache().put(KEY_ONE, VALUE_ONE);
-        
+
         Exchange exchange = template.request("direct:containskey", new Processor() {
             @Override
             public void process(Exchange exchange) throws Exception {
                 exchange.getIn().setHeader(InfinispanConstants.KEY, KEY_ONE);
-                exchange.getIn().setHeader(InfinispanConstants.OPERATION, InfinispanConstants.CONTAINS_KEY);
+                exchange.getIn().setHeader(InfinispanConstants.OPERATION, InfinispanOperation.CONTAINSKEY);
             }
         });
 
-        assertEquals(exchange.getIn().getHeader(InfinispanConstants.RESULT, Boolean.class), true);
+        Boolean cacheContainsKey = exchange.getIn().getBody(Boolean.class);
+        assertTrue(cacheContainsKey);
     }
-    
+
     @Test
     public void notContainsValueTest() throws Exception {
         currentCache().put(KEY_ONE, VALUE_ONE);
-        
+
         Exchange exchange = template.request("direct:containsvalue", new Processor() {
             @Override
             public void process(Exchange exchange) throws Exception {
                 exchange.getIn().setHeader(InfinispanConstants.VALUE, VALUE_TWO);
-                exchange.getIn().setHeader(InfinispanConstants.OPERATION, InfinispanConstants.CONTAINS_VALUE);
+                exchange.getIn().setHeader(InfinispanConstants.OPERATION, InfinispanOperation.CONTAINSVALUE);
             }
         });
 
-        assertEquals(exchange.getIn().getHeader(InfinispanConstants.RESULT, Boolean.class), false);
+        Boolean cacheContainsValue = exchange.getIn().getBody(Boolean.class);
+        assertFalse(cacheContainsValue);
     }
-    
+
     @Test
     public void containsValueTest() throws Exception {
         currentCache().put(KEY_ONE, VALUE_ONE);
-        
+
         Exchange exchange = template.request("direct:containsvalue", new Processor() {
             @Override
             public void process(Exchange exchange) throws Exception {
                 exchange.getIn().setHeader(InfinispanConstants.VALUE, VALUE_ONE);
-                exchange.getIn().setHeader(InfinispanConstants.OPERATION, InfinispanConstants.CONTAINS_VALUE);
+                exchange.getIn().setHeader(InfinispanConstants.OPERATION, InfinispanOperation.CONTAINSVALUE);
             }
         });
 
-        assertEquals(exchange.getIn().getHeader(InfinispanConstants.RESULT, Boolean.class), true);
+        Boolean cacheContainsValue = exchange.getIn().getBody(Boolean.class);
+        assertTrue(cacheContainsValue);
     }
-    
+
     @Test
     public void publishKeyAndValueWithLifespan() throws Exception {
         template.send("direct:start", new Processor() {
@@ -548,15 +481,15 @@ public class InfinispanProducerTest extends InfinispanTestSupport {
             public void process(Exchange exchange) throws Exception {
                 exchange.getIn().setHeader(InfinispanConstants.KEY, KEY_ONE);
                 exchange.getIn().setHeader(InfinispanConstants.VALUE, VALUE_ONE);
-                exchange.getIn().setHeader(InfinispanConstants.LIFESPAN_TIME, new Long(LIFESPAN_TIME));
-                exchange.getIn().setHeader(InfinispanConstants.LIFESPAN_TIME_UNIT, TimeUnit.SECONDS.toString());
-                exchange.getIn().setHeader(InfinispanConstants.OPERATION, InfinispanConstants.PUT);
+                exchange.getIn().setHeader(InfinispanConstants.LIFESPAN_TIME, Long.valueOf(LIFESPAN_TIME));
+                exchange.getIn().setHeader(InfinispanConstants.LIFESPAN_TIME_UNIT, TimeUnit.MILLISECONDS.toString());
+                exchange.getIn().setHeader(InfinispanConstants.OPERATION, InfinispanOperation.PUT);
             }
         });
 
         Object value = currentCache().get(KEY_ONE);
-        assertEquals(value.toString(), VALUE_ONE);
-        
+        assertEquals(VALUE_ONE, value.toString());
+
         Exchange exchange;
         exchange = template.send("direct:get", new Processor() {
             @Override
@@ -564,19 +497,46 @@ public class InfinispanProducerTest extends InfinispanTestSupport {
                 exchange.getIn().setHeader(InfinispanConstants.KEY, KEY_ONE);
             }
         });
-        String resultGet = exchange.getIn().getHeader(InfinispanConstants.RESULT, String.class);
+        String resultGet = exchange.getIn().getBody(String.class);
         assertEquals(VALUE_ONE, resultGet);
-        
-        Thread.sleep(LIFESPAN_TIME * 1000);
-        
-        exchange = template.send("direct:get", new Processor() {
+
+        waitForNullValue(KEY_ONE);
+    }
+
+    @Test
+    public void getOrDefault() throws Exception {
+        template.send("direct:start", new Processor() {
             @Override
             public void process(Exchange exchange) throws Exception {
                 exchange.getIn().setHeader(InfinispanConstants.KEY, KEY_ONE);
+                exchange.getIn().setHeader(InfinispanConstants.VALUE, VALUE_ONE);
+                exchange.getIn().setHeader(InfinispanConstants.OPERATION, InfinispanOperation.PUT);
             }
         });
-        resultGet = exchange.getIn().getHeader(InfinispanConstants.RESULT, String.class);
-        assertEquals(null, resultGet);
+
+        Object value = currentCache().get(KEY_ONE);
+        assertEquals(VALUE_ONE, value.toString());
+
+        Exchange exchange;
+        exchange = template.send("direct:getOrDefault", new Processor() {
+            @Override
+            public void process(Exchange exchange) throws Exception {
+                exchange.getIn().setHeader(InfinispanConstants.KEY, KEY_ONE);
+                exchange.getIn().setHeader(InfinispanConstants.DEFAULT_VALUE, "defaultTest");
+            }
+        });
+        String resultGet = exchange.getIn().getBody(String.class);
+        assertEquals(VALUE_ONE, resultGet);
+
+        exchange = template.send("direct:getOrDefault", new Processor() {
+            @Override
+            public void process(Exchange exchange) throws Exception {
+                exchange.getIn().setHeader(InfinispanConstants.KEY, KEY_TWO);
+                exchange.getIn().setHeader(InfinispanConstants.DEFAULT_VALUE, "defaultTest");
+            }
+        });
+        resultGet = exchange.getIn().getBody(String.class);
+        assertEquals("defaultTest", resultGet);
     }
 
     @Test
@@ -588,11 +548,44 @@ public class InfinispanProducerTest extends InfinispanTestSupport {
             public void process(Exchange exchange) throws Exception {
                 exchange.getIn().setHeader(InfinispanConstants.KEY, KEY_ONE);
                 exchange.getIn().setHeader(InfinispanConstants.VALUE, VALUE_ONE);
-                exchange.getIn().setHeader(InfinispanConstants.OPERATION, InfinispanConstants.PUT);
+                exchange.getIn().setHeader(InfinispanConstants.OPERATION, InfinispanOperation.PUT);
             }
         });
 
-        assertEquals(exchange.getIn().getHeader(InfinispanConstants.RESULT, String.class), "existing value");
+        String result = exchange.getIn().getBody(String.class);
+        assertEquals("existing value", result);
+    }
+
+    @Test
+    public void computeOperation() throws Exception {
+        currentCache().put(KEY_ONE, "existing value");
+
+        Exchange exchange = template.request("direct:compute", new Processor() {
+            @Override
+            public void process(Exchange exchange) throws Exception {
+                exchange.getIn().setHeader(InfinispanConstants.KEY, KEY_ONE);
+                exchange.getIn().setHeader(InfinispanConstants.OPERATION, InfinispanOperation.COMPUTE);
+            }
+        });
+
+        String result = exchange.getIn().getBody(String.class);
+        assertEquals("existing valuereplay", result);
+    }
+
+    @Test
+    public void computeAsyncOperation() throws Exception {
+        currentCache().put(KEY_ONE, "existing value");
+
+        Exchange exchange = template.request("direct:computeAsync", new Processor() {
+            @Override
+            public void process(Exchange exchange) throws Exception {
+                exchange.getIn().setHeader(InfinispanConstants.KEY, KEY_ONE);
+                exchange.getIn().setHeader(InfinispanConstants.OPERATION, InfinispanOperation.COMPUTEASYNC);
+            }
+        });
+
+        CompletableFuture result = exchange.getIn().getBody(CompletableFuture.class);
+        assertEquals("existing valuereplay", result.get().toString());
     }
 
     @Test
@@ -603,13 +596,13 @@ public class InfinispanProducerTest extends InfinispanTestSupport {
             @Override
             public void process(Exchange exchange) throws Exception {
                 exchange.getIn().setHeader(InfinispanConstants.KEY, KEY_ONE);
-                exchange.getIn().setHeader(InfinispanConstants.OPERATION, InfinispanConstants.GET);
+                exchange.getIn().setHeader(InfinispanConstants.OPERATION, InfinispanOperation.GET);
             }
         });
 
-        assertEquals(exchange.getIn().getHeader(InfinispanConstants.RESULT, String.class), VALUE_ONE);
+        assertEquals(VALUE_ONE, exchange.getIn().getBody(String.class));
     }
-    
+
     @Test
     public void replaceAValueByKey() throws Exception {
         currentCache().put(KEY_ONE, VALUE_ONE);
@@ -619,14 +612,14 @@ public class InfinispanProducerTest extends InfinispanTestSupport {
             public void process(Exchange exchange) throws Exception {
                 exchange.getIn().setHeader(InfinispanConstants.KEY, KEY_ONE);
                 exchange.getIn().setHeader(InfinispanConstants.VALUE, VALUE_TWO);
-                exchange.getIn().setHeader(InfinispanConstants.OPERATION, InfinispanConstants.REPLACE);
+                exchange.getIn().setHeader(InfinispanConstants.OPERATION, InfinispanOperation.REPLACE);
             }
         });
 
-        assertEquals(exchange.getIn().getHeader(InfinispanConstants.RESULT, String.class), VALUE_ONE);
-        assertEquals(currentCache().get(KEY_ONE), VALUE_TWO);
+        assertEquals(VALUE_ONE, exchange.getIn().getBody(String.class));
+        assertEquals(VALUE_TWO, currentCache().get(KEY_ONE));
     }
-    
+
     @Test
     public void replaceAValueByKeyWithLifespan() throws Exception {
         currentCache().put(KEY_ONE, VALUE_ONE);
@@ -636,27 +629,18 @@ public class InfinispanProducerTest extends InfinispanTestSupport {
             public void process(Exchange exchange) throws Exception {
                 exchange.getIn().setHeader(InfinispanConstants.KEY, KEY_ONE);
                 exchange.getIn().setHeader(InfinispanConstants.VALUE, VALUE_TWO);
-                exchange.getIn().setHeader(InfinispanConstants.LIFESPAN_TIME, new Long(LIFESPAN_TIME));
-                exchange.getIn().setHeader(InfinispanConstants.LIFESPAN_TIME_UNIT, TimeUnit.SECONDS.toString());
-                exchange.getIn().setHeader(InfinispanConstants.OPERATION, InfinispanConstants.REPLACE);
+                exchange.getIn().setHeader(InfinispanConstants.LIFESPAN_TIME, Long.valueOf(LIFESPAN_TIME));
+                exchange.getIn().setHeader(InfinispanConstants.LIFESPAN_TIME_UNIT, TimeUnit.MILLISECONDS.toString());
+                exchange.getIn().setHeader(InfinispanConstants.OPERATION, InfinispanOperation.REPLACE);
             }
         });
 
-        assertEquals(exchange.getIn().getHeader(InfinispanConstants.RESULT, String.class), VALUE_ONE);
-        assertEquals(currentCache().get(KEY_ONE), VALUE_TWO);
-        
-        Thread.sleep(LIFESPAN_TIME * 1000);
-        
-        exchange = template.send("direct:get", new Processor() {
-            @Override
-            public void process(Exchange exchange) throws Exception {
-                exchange.getIn().setHeader(InfinispanConstants.KEY, KEY_ONE);
-            }
-        });
-        String resultGet = exchange.getIn().getHeader(InfinispanConstants.RESULT, String.class);
-        assertEquals(null, resultGet);
+        assertEquals(VALUE_ONE, exchange.getIn().getBody(String.class));
+        assertEquals(VALUE_TWO, currentCache().get(KEY_ONE));
+
+        waitForNullValue(KEY_ONE);
     }
-    
+
     @Test
     public void replaceAValueByKeyWithLifespanAndMaxIdleTime() throws Exception {
         currentCache().put(KEY_ONE, VALUE_ONE);
@@ -666,27 +650,19 @@ public class InfinispanProducerTest extends InfinispanTestSupport {
             public void process(Exchange exchange) throws Exception {
                 exchange.getIn().setHeader(InfinispanConstants.KEY, KEY_ONE);
                 exchange.getIn().setHeader(InfinispanConstants.VALUE, VALUE_TWO);
-                exchange.getIn().setHeader(InfinispanConstants.LIFESPAN_TIME, new Long(LIFESPAN_FOR_MAX_IDLE));
-                exchange.getIn().setHeader(InfinispanConstants.LIFESPAN_TIME_UNIT, TimeUnit.SECONDS.toString());
-                exchange.getIn().setHeader(InfinispanConstants.MAX_IDLE_TIME, new Long(MAX_IDLE_TIME));
-                exchange.getIn().setHeader(InfinispanConstants.MAX_IDLE_TIME_UNIT, TimeUnit.SECONDS.toString());
-                exchange.getIn().setHeader(InfinispanConstants.OPERATION, InfinispanConstants.REPLACE);
+                exchange.getIn().setHeader(InfinispanConstants.LIFESPAN_TIME, Long.valueOf(LIFESPAN_FOR_MAX_IDLE));
+                exchange.getIn().setHeader(InfinispanConstants.LIFESPAN_TIME_UNIT, TimeUnit.MILLISECONDS.toString());
+                exchange.getIn().setHeader(InfinispanConstants.MAX_IDLE_TIME, Long.valueOf(MAX_IDLE_TIME));
+                exchange.getIn().setHeader(InfinispanConstants.MAX_IDLE_TIME_UNIT, TimeUnit.MILLISECONDS.toString());
+                exchange.getIn().setHeader(InfinispanConstants.OPERATION, InfinispanOperation.REPLACE);
             }
         });
 
-        assertEquals(exchange.getIn().getHeader(InfinispanConstants.RESULT, String.class), VALUE_ONE);
-        assertEquals(currentCache().get(KEY_ONE), VALUE_TWO);
-        
-        Thread.sleep(10000);
-        
-        exchange = template.send("direct:get", new Processor() {
-            @Override
-            public void process(Exchange exchange) throws Exception {
-                exchange.getIn().setHeader(InfinispanConstants.KEY, KEY_ONE);
-            }
-        });
-        String resultGet = exchange.getIn().getHeader(InfinispanConstants.RESULT, String.class);
-        assertEquals(null, resultGet);
+        assertEquals(VALUE_ONE, exchange.getIn().getBody(String.class));
+        assertEquals(VALUE_TWO, currentCache().get(KEY_ONE));
+
+        Thread.sleep(300);
+        waitForNullValue(KEY_ONE);
     }
 
     @Test
@@ -699,14 +675,14 @@ public class InfinispanProducerTest extends InfinispanTestSupport {
                 exchange.getIn().setHeader(InfinispanConstants.KEY, KEY_ONE);
                 exchange.getIn().setHeader(InfinispanConstants.VALUE, VALUE_TWO);
                 exchange.getIn().setHeader(InfinispanConstants.OLD_VALUE, VALUE_ONE);
-                exchange.getIn().setHeader(InfinispanConstants.OPERATION, InfinispanConstants.REPLACE);
+                exchange.getIn().setHeader(InfinispanConstants.OPERATION, InfinispanOperation.REPLACE);
             }
         });
 
-        assertEquals(exchange.getIn().getHeader(InfinispanConstants.RESULT, Boolean.class), true);
-        assertEquals(currentCache().get(KEY_ONE), VALUE_TWO);
+        assertTrue(exchange.getIn().getBody(Boolean.class));
+        assertEquals(VALUE_TWO, currentCache().get(KEY_ONE));
     }
-    
+
     @Test
     public void replaceAValueByKeyWithLifespanWithOldValue() throws Exception {
         currentCache().put(KEY_ONE, VALUE_ONE);
@@ -717,27 +693,18 @@ public class InfinispanProducerTest extends InfinispanTestSupport {
                 exchange.getIn().setHeader(InfinispanConstants.KEY, KEY_ONE);
                 exchange.getIn().setHeader(InfinispanConstants.VALUE, VALUE_TWO);
                 exchange.getIn().setHeader(InfinispanConstants.OLD_VALUE, VALUE_ONE);
-                exchange.getIn().setHeader(InfinispanConstants.LIFESPAN_TIME, new Long(LIFESPAN_TIME));
-                exchange.getIn().setHeader(InfinispanConstants.LIFESPAN_TIME_UNIT, TimeUnit.SECONDS.toString());
-                exchange.getIn().setHeader(InfinispanConstants.OPERATION, InfinispanConstants.REPLACE);
+                exchange.getIn().setHeader(InfinispanConstants.LIFESPAN_TIME, Long.valueOf(LIFESPAN_TIME));
+                exchange.getIn().setHeader(InfinispanConstants.LIFESPAN_TIME_UNIT, TimeUnit.MILLISECONDS.toString());
+                exchange.getIn().setHeader(InfinispanConstants.OPERATION, InfinispanOperation.REPLACE);
             }
         });
 
-        assertEquals(exchange.getIn().getHeader(InfinispanConstants.RESULT, Boolean.class), true);
-        assertEquals(currentCache().get(KEY_ONE), VALUE_TWO);
-        
-        Thread.sleep(LIFESPAN_TIME * 1000);
-        
-        exchange = template.send("direct:get", new Processor() {
-            @Override
-            public void process(Exchange exchange) throws Exception {
-                exchange.getIn().setHeader(InfinispanConstants.KEY, KEY_ONE);
-            }
-        });
-        String resultGet = exchange.getIn().getHeader(InfinispanConstants.RESULT, String.class);
-        assertEquals(null, resultGet);
+        assertTrue(exchange.getIn().getBody(Boolean.class));
+        assertEquals(VALUE_TWO, currentCache().get(KEY_ONE));
+
+        waitForNullValue(KEY_ONE);
     }
-    
+
     @Test
     public void replaceAValueByKeyWithLifespanAndMaxIdleTimeWithOldValue() throws Exception {
         currentCache().put(KEY_ONE, VALUE_ONE);
@@ -748,30 +715,21 @@ public class InfinispanProducerTest extends InfinispanTestSupport {
                 exchange.getIn().setHeader(InfinispanConstants.KEY, KEY_ONE);
                 exchange.getIn().setHeader(InfinispanConstants.VALUE, VALUE_TWO);
                 exchange.getIn().setHeader(InfinispanConstants.OLD_VALUE, VALUE_ONE);
-                exchange.getIn().setHeader(InfinispanConstants.LIFESPAN_TIME, new Long(LIFESPAN_FOR_MAX_IDLE));
-                exchange.getIn().setHeader(InfinispanConstants.LIFESPAN_TIME_UNIT, TimeUnit.SECONDS.toString());
-                exchange.getIn().setHeader(InfinispanConstants.MAX_IDLE_TIME, new Long(MAX_IDLE_TIME));
-                exchange.getIn().setHeader(InfinispanConstants.MAX_IDLE_TIME_UNIT, TimeUnit.SECONDS.toString());
-                exchange.getIn().setHeader(InfinispanConstants.OPERATION, InfinispanConstants.REPLACE);
+                exchange.getIn().setHeader(InfinispanConstants.LIFESPAN_TIME, Long.valueOf(LIFESPAN_FOR_MAX_IDLE));
+                exchange.getIn().setHeader(InfinispanConstants.LIFESPAN_TIME_UNIT, TimeUnit.MILLISECONDS.toString());
+                exchange.getIn().setHeader(InfinispanConstants.MAX_IDLE_TIME, Long.valueOf(MAX_IDLE_TIME));
+                exchange.getIn().setHeader(InfinispanConstants.MAX_IDLE_TIME_UNIT, TimeUnit.MILLISECONDS.toString());
+                exchange.getIn().setHeader(InfinispanConstants.OPERATION, InfinispanOperation.REPLACE);
             }
         });
 
-        assertEquals(exchange.getIn().getHeader(InfinispanConstants.RESULT, Boolean.class), true);
-        assertEquals(currentCache().get(KEY_ONE), VALUE_TWO);
-        
-        Thread.sleep(10000);
-        
-        exchange = template.send("direct:get", new Processor() {
-            @Override
-            public void process(Exchange exchange) throws Exception {
-                exchange.getIn().setHeader(InfinispanConstants.KEY, KEY_ONE);
-            }
-        });
-        String resultGet = exchange.getIn().getHeader(InfinispanConstants.RESULT, String.class);
-        assertEquals(null, resultGet);
-    }    
-    
-    
+        assertTrue(exchange.getIn().getBody(Boolean.class));
+        assertEquals(VALUE_TWO, currentCache().get(KEY_ONE));
+
+        Thread.sleep(300);
+        waitForNullValue(KEY_ONE);
+    }
+
     @Test
     public void replaceAValueByKeyAsync() throws Exception {
         currentCache().put(KEY_ONE, VALUE_ONE);
@@ -784,10 +742,10 @@ public class InfinispanProducerTest extends InfinispanTestSupport {
             }
         });
 
-        assertEquals(exchange.getIn().getHeader(InfinispanConstants.RESULT, String.class), VALUE_ONE);
-        assertEquals(currentCache().get(KEY_ONE), VALUE_TWO);
+        assertEquals(VALUE_ONE, exchange.getIn().getBody(String.class));
+        assertEquals(VALUE_TWO, currentCache().get(KEY_ONE));
     }
-    
+
     @Test
     public void replaceAValueByKeyWithLifespanAsync() throws Exception {
         currentCache().put(KEY_ONE, VALUE_ONE);
@@ -797,26 +755,17 @@ public class InfinispanProducerTest extends InfinispanTestSupport {
             public void process(Exchange exchange) throws Exception {
                 exchange.getIn().setHeader(InfinispanConstants.KEY, KEY_ONE);
                 exchange.getIn().setHeader(InfinispanConstants.VALUE, VALUE_TWO);
-                exchange.getIn().setHeader(InfinispanConstants.LIFESPAN_TIME, new Long(LIFESPAN_TIME));
-                exchange.getIn().setHeader(InfinispanConstants.LIFESPAN_TIME_UNIT, TimeUnit.SECONDS.toString());
+                exchange.getIn().setHeader(InfinispanConstants.LIFESPAN_TIME, Long.valueOf(LIFESPAN_TIME));
+                exchange.getIn().setHeader(InfinispanConstants.LIFESPAN_TIME_UNIT, TimeUnit.MILLISECONDS.toString());
             }
         });
 
-        assertEquals(exchange.getIn().getHeader(InfinispanConstants.RESULT, String.class), VALUE_ONE);
+        assertEquals(exchange.getIn().getBody(String.class), VALUE_ONE);
         assertEquals(currentCache().get(KEY_ONE), VALUE_TWO);
-        
-        Thread.sleep(LIFESPAN_TIME * 1000);
-        
-        exchange = template.send("direct:get", new Processor() {
-            @Override
-            public void process(Exchange exchange) throws Exception {
-                exchange.getIn().setHeader(InfinispanConstants.KEY, KEY_ONE);
-            }
-        });
-        String resultGet = exchange.getIn().getHeader(InfinispanConstants.RESULT, String.class);
-        assertEquals(null, resultGet);
+
+        waitForNullValue(KEY_ONE);
     }
-    
+
     @Test
     public void replaceAValueByKeyWithLifespanAndMaxIdleTimeAsync() throws Exception {
         currentCache().put(KEY_ONE, VALUE_ONE);
@@ -826,28 +775,20 @@ public class InfinispanProducerTest extends InfinispanTestSupport {
             public void process(Exchange exchange) throws Exception {
                 exchange.getIn().setHeader(InfinispanConstants.KEY, KEY_ONE);
                 exchange.getIn().setHeader(InfinispanConstants.VALUE, VALUE_TWO);
-                exchange.getIn().setHeader(InfinispanConstants.LIFESPAN_TIME, new Long(LIFESPAN_FOR_MAX_IDLE));
-                exchange.getIn().setHeader(InfinispanConstants.LIFESPAN_TIME_UNIT, TimeUnit.SECONDS.toString());
-                exchange.getIn().setHeader(InfinispanConstants.MAX_IDLE_TIME, new Long(MAX_IDLE_TIME));
-                exchange.getIn().setHeader(InfinispanConstants.MAX_IDLE_TIME_UNIT, TimeUnit.SECONDS.toString());
+                exchange.getIn().setHeader(InfinispanConstants.LIFESPAN_TIME, Long.valueOf(LIFESPAN_FOR_MAX_IDLE));
+                exchange.getIn().setHeader(InfinispanConstants.LIFESPAN_TIME_UNIT, TimeUnit.MILLISECONDS.toString());
+                exchange.getIn().setHeader(InfinispanConstants.MAX_IDLE_TIME, Long.valueOf(MAX_IDLE_TIME));
+                exchange.getIn().setHeader(InfinispanConstants.MAX_IDLE_TIME_UNIT, TimeUnit.MILLISECONDS.toString());
             }
         });
 
-        assertEquals(exchange.getIn().getHeader(InfinispanConstants.RESULT, String.class), VALUE_ONE);
-        assertEquals(currentCache().get(KEY_ONE), VALUE_TWO);
-        
-        Thread.sleep(10000);
-        
-        exchange = template.send("direct:get", new Processor() {
-            @Override
-            public void process(Exchange exchange) throws Exception {
-                exchange.getIn().setHeader(InfinispanConstants.KEY, KEY_ONE);
-            }
-        });
-        String resultGet = exchange.getIn().getHeader(InfinispanConstants.RESULT, String.class);
-        assertEquals(null, resultGet);
+        assertEquals(VALUE_ONE, exchange.getIn().getBody(String.class));
+        assertEquals(VALUE_TWO, currentCache().get(KEY_ONE));
+
+        Thread.sleep(300);
+        waitForNullValue(KEY_ONE);
     }
-    
+
     @Test
     public void replaceAValueByKeyAsyncWithOldValue() throws Exception {
         currentCache().put(KEY_ONE, VALUE_ONE);
@@ -861,10 +802,10 @@ public class InfinispanProducerTest extends InfinispanTestSupport {
             }
         });
 
-        assertEquals(exchange.getIn().getHeader(InfinispanConstants.RESULT, Boolean.class), true);
-        assertEquals(currentCache().get(KEY_ONE), VALUE_TWO);
+        assertTrue(exchange.getIn().getBody(Boolean.class));
+        assertEquals(VALUE_TWO, currentCache().get(KEY_ONE));
     }
-    
+
     @Test
     public void replaceAValueByKeyWithLifespanAsyncWithOldValue() throws Exception {
         currentCache().put(KEY_ONE, VALUE_ONE);
@@ -875,26 +816,17 @@ public class InfinispanProducerTest extends InfinispanTestSupport {
                 exchange.getIn().setHeader(InfinispanConstants.KEY, KEY_ONE);
                 exchange.getIn().setHeader(InfinispanConstants.VALUE, VALUE_TWO);
                 exchange.getIn().setHeader(InfinispanConstants.OLD_VALUE, VALUE_ONE);
-                exchange.getIn().setHeader(InfinispanConstants.LIFESPAN_TIME, new Long(LIFESPAN_TIME));
-                exchange.getIn().setHeader(InfinispanConstants.LIFESPAN_TIME_UNIT, TimeUnit.SECONDS.toString());
+                exchange.getIn().setHeader(InfinispanConstants.LIFESPAN_TIME, Long.valueOf(LIFESPAN_TIME));
+                exchange.getIn().setHeader(InfinispanConstants.LIFESPAN_TIME_UNIT, TimeUnit.MILLISECONDS.toString());
             }
         });
 
-        assertEquals(exchange.getIn().getHeader(InfinispanConstants.RESULT, Boolean.class), true);
-        assertEquals(currentCache().get(KEY_ONE), VALUE_TWO);
-        
-        Thread.sleep(LIFESPAN_TIME * 1000);
-        
-        exchange = template.send("direct:get", new Processor() {
-            @Override
-            public void process(Exchange exchange) throws Exception {
-                exchange.getIn().setHeader(InfinispanConstants.KEY, KEY_ONE);
-            }
-        });
-        String resultGet = exchange.getIn().getHeader(InfinispanConstants.RESULT, String.class);
-        assertEquals(null, resultGet);
+        assertTrue(exchange.getIn().getBody(Boolean.class));
+        assertEquals(VALUE_TWO, currentCache().get(KEY_ONE));
+
+        waitForNullValue(KEY_ONE);
     }
-    
+
     @Test
     public void replaceAValueByKeyWithLifespanAndMaxIdleTimeAsyncWithOldValue() throws Exception {
         currentCache().put(KEY_ONE, VALUE_ONE);
@@ -905,26 +837,18 @@ public class InfinispanProducerTest extends InfinispanTestSupport {
                 exchange.getIn().setHeader(InfinispanConstants.KEY, KEY_ONE);
                 exchange.getIn().setHeader(InfinispanConstants.VALUE, VALUE_TWO);
                 exchange.getIn().setHeader(InfinispanConstants.OLD_VALUE, VALUE_ONE);
-                exchange.getIn().setHeader(InfinispanConstants.LIFESPAN_TIME, new Long(LIFESPAN_FOR_MAX_IDLE));
-                exchange.getIn().setHeader(InfinispanConstants.LIFESPAN_TIME_UNIT, TimeUnit.SECONDS.toString());
-                exchange.getIn().setHeader(InfinispanConstants.MAX_IDLE_TIME, new Long(MAX_IDLE_TIME));
-                exchange.getIn().setHeader(InfinispanConstants.MAX_IDLE_TIME_UNIT, TimeUnit.SECONDS.toString());
+                exchange.getIn().setHeader(InfinispanConstants.LIFESPAN_TIME, Long.valueOf(LIFESPAN_FOR_MAX_IDLE));
+                exchange.getIn().setHeader(InfinispanConstants.LIFESPAN_TIME_UNIT, TimeUnit.MILLISECONDS.toString());
+                exchange.getIn().setHeader(InfinispanConstants.MAX_IDLE_TIME, Long.valueOf(MAX_IDLE_TIME));
+                exchange.getIn().setHeader(InfinispanConstants.MAX_IDLE_TIME_UNIT, TimeUnit.MILLISECONDS.toString());
             }
         });
 
-        assertEquals(exchange.getIn().getHeader(InfinispanConstants.RESULT, Boolean.class), true);
-        assertEquals(currentCache().get(KEY_ONE), VALUE_TWO);
-        
-        Thread.sleep(10000);
-        
-        exchange = template.send("direct:get", new Processor() {
-            @Override
-            public void process(Exchange exchange) throws Exception {
-                exchange.getIn().setHeader(InfinispanConstants.KEY, KEY_ONE);
-            }
-        });
-        String resultGet = exchange.getIn().getHeader(InfinispanConstants.RESULT, String.class);
-        assertEquals(null, resultGet);
+        assertTrue(exchange.getIn().getBody(Boolean.class));
+        assertEquals(VALUE_TWO, currentCache().get(KEY_ONE));
+
+        Thread.sleep(300);
+        waitForNullValue(KEY_ONE);
     }
 
     @Test
@@ -935,16 +859,16 @@ public class InfinispanProducerTest extends InfinispanTestSupport {
             @Override
             public void process(Exchange exchange) throws Exception {
                 exchange.getIn().setHeader(InfinispanConstants.KEY, KEY_ONE);
-                exchange.getIn().setHeader(InfinispanConstants.OPERATION, InfinispanConstants.REMOVE);
+                exchange.getIn().setHeader(InfinispanConstants.OPERATION, InfinispanOperation.REMOVE);
             }
         });
 
-        assertEquals(exchange.getIn().getHeader(InfinispanConstants.RESULT, String.class), VALUE_ONE);
+        assertEquals(VALUE_ONE, exchange.getIn().getBody(String.class));
 
         Object value = currentCache().get(KEY_ONE);
-        assertEquals(value, null);
+        assertNull(value);
     }
-    
+
     @Test
     public void deletesExistingValueByKeyAsync() throws Exception {
         currentCache().put(KEY_ONE, VALUE_ONE);
@@ -953,18 +877,18 @@ public class InfinispanProducerTest extends InfinispanTestSupport {
             @Override
             public void process(Exchange exchange) throws Exception {
                 exchange.getIn().setHeader(InfinispanConstants.KEY, KEY_ONE);
-                exchange.getIn().setHeader(InfinispanConstants.OPERATION, InfinispanConstants.REMOVE_ASYNC);
+                exchange.getIn().setHeader(InfinispanConstants.OPERATION, InfinispanOperation.REMOVEASYNC);
             }
         });
 
         Thread.sleep(100);
-        NotifyingFuture fut = exchange.getIn().getHeader(InfinispanConstants.RESULT, NotifyingFuture.class);
-        assertEquals(fut.isDone(), Boolean.TRUE);
+        CompletableFuture<Object> fut = exchange.getIn().getBody(CompletableFuture.class);
+        assertTrue(fut.isDone());
 
         Object value = currentCache().get(KEY_ONE);
-        assertEquals(value, null);
+        assertNull(value);
     }
-    
+
     @Test
     public void deletesExistingValueByKeyWithValue() throws Exception {
         currentCache().put(KEY_ONE, VALUE_ONE);
@@ -974,16 +898,16 @@ public class InfinispanProducerTest extends InfinispanTestSupport {
             public void process(Exchange exchange) throws Exception {
                 exchange.getIn().setHeader(InfinispanConstants.KEY, KEY_ONE);
                 exchange.getIn().setHeader(InfinispanConstants.VALUE, VALUE_ONE);
-                exchange.getIn().setHeader(InfinispanConstants.OPERATION, InfinispanConstants.REMOVE);
+                exchange.getIn().setHeader(InfinispanConstants.OPERATION, InfinispanOperation.REMOVE);
             }
         });
 
-        assertEquals(exchange.getIn().getHeader(InfinispanConstants.RESULT, Boolean.class), true);
+        assertTrue(exchange.getIn().getBody(Boolean.class));
 
         Object value = currentCache().get(KEY_ONE);
-        assertEquals(value, null);
+        assertNull(value);
     }
-    
+
     @Test
     public void deletesExistingValueByKeyAsyncWithValue() throws Exception {
         currentCache().put(KEY_ONE, VALUE_ONE);
@@ -993,31 +917,31 @@ public class InfinispanProducerTest extends InfinispanTestSupport {
             public void process(Exchange exchange) throws Exception {
                 exchange.getIn().setHeader(InfinispanConstants.KEY, KEY_ONE);
                 exchange.getIn().setHeader(InfinispanConstants.VALUE, VALUE_ONE);
-                exchange.getIn().setHeader(InfinispanConstants.OPERATION, InfinispanConstants.REMOVE_ASYNC);
+                exchange.getIn().setHeader(InfinispanConstants.OPERATION, InfinispanOperation.REMOVEASYNC);
             }
         });
 
         Thread.sleep(100);
-        NotifyingFuture fut = exchange.getIn().getHeader(InfinispanConstants.RESULT, NotifyingFuture.class);
-        assertEquals(fut.isDone(), Boolean.TRUE);
+        CompletableFuture<Object> fut = exchange.getIn().getBody(CompletableFuture.class);
+        assertTrue(fut.isDone());
 
         Object value = currentCache().get(KEY_ONE);
-        assertEquals(value, null);
+        assertNull(value);
     }
 
     @Test
     public void clearsAllValues() throws Exception {
         currentCache().put(KEY_ONE, VALUE_ONE);
-        assertEquals(currentCache().isEmpty(), false);
+        assertFalse(currentCache().isEmpty());
 
         template.send("direct:start", new Processor() {
             @Override
             public void process(Exchange exchange) throws Exception {
-                exchange.getIn().setHeader(InfinispanConstants.OPERATION, InfinispanConstants.CLEAR);
+                exchange.getIn().setHeader(InfinispanConstants.OPERATION, InfinispanOperation.CLEAR);
             }
         });
 
-        assertEquals(currentCache().isEmpty(), true);
+        assertTrue(currentCache().isEmpty());
     }
 
     @Test
@@ -1039,7 +963,7 @@ public class InfinispanProducerTest extends InfinispanTestSupport {
                 exchange.getIn().setHeader(InfinispanConstants.KEY, COMMAND_KEY);
             }
         });
-        String resultGet = exchange.getIn().getHeader(InfinispanConstants.RESULT, String.class);
+        String resultGet = exchange.getIn().getBody(String.class);
         assertEquals(COMMAND_VALUE, resultGet);
 
         exchange = template.send("direct:remove", new Processor() {
@@ -1048,7 +972,7 @@ public class InfinispanProducerTest extends InfinispanTestSupport {
                 exchange.getIn().setHeader(InfinispanConstants.KEY, COMMAND_KEY);
             }
         });
-        String resultRemove = exchange.getIn().getHeader(InfinispanConstants.RESULT, String.class);
+        String resultRemove = exchange.getIn().getBody(String.class);
         assertEquals(COMMAND_VALUE, resultRemove);
         assertNull(currentCache().get(COMMAND_KEY));
         assertTrue(currentCache().isEmpty());
@@ -1065,42 +989,184 @@ public class InfinispanProducerTest extends InfinispanTestSupport {
         assertTrue(currentCache().isEmpty());
     }
 
+    @Test
+    public void testDeprecatedUriOption() throws Exception {
+        template.send("direct:put-deprecated-option", new Processor() {
+            @Override
+            public void process(Exchange exchange) throws Exception {
+                exchange.getIn().setHeader(InfinispanConstants.KEY, COMMAND_KEY);
+                exchange.getIn().setHeader(InfinispanConstants.VALUE, COMMAND_VALUE);
+            }
+        });
+        String result = (String) currentCache().get(COMMAND_KEY);
+        assertEquals(COMMAND_VALUE, result);
+        assertEquals(COMMAND_VALUE, currentCache().get(COMMAND_KEY));
+    }
+
+    @Test
+    public void testDeprecatedUriCommand() throws Exception {
+        template.send("direct:put-deprecated-command", new Processor() {
+            @Override
+            public void process(Exchange exchange) throws Exception {
+                exchange.getIn().setHeader(InfinispanConstants.KEY, COMMAND_KEY);
+                exchange.getIn().setHeader(InfinispanConstants.VALUE, COMMAND_VALUE);
+            }
+        });
+        String result = (String) currentCache().get(COMMAND_KEY);
+        assertEquals(COMMAND_VALUE, result);
+        assertEquals(COMMAND_VALUE, currentCache().get(COMMAND_KEY));
+    }
+
+    @Test
+    public void clearAsyncTest() throws Exception {
+        currentCache().put(KEY_ONE, VALUE_ONE);
+        currentCache().put(KEY_TWO, VALUE_TWO);
+
+        Exchange exchange = template.request("direct:clearasync", new Processor() {
+            @Override
+            public void process(Exchange exchange) throws Exception {
+                exchange.getIn().setHeader(InfinispanConstants.OPERATION, InfinispanOperation.CLEARASYNC);
+            }
+        });
+
+        Thread.sleep(100);
+        CompletableFuture<Object> fut = exchange.getIn().getBody(CompletableFuture.class);
+        assertTrue(fut.isDone());
+        assertTrue(currentCache().isEmpty());
+    }
+
+    @Test
+    public void statsOperation() throws Exception {
+        ((Cache) currentCache()).getAdvancedCache().getStats().setStatisticsEnabled(true);
+        template.send("direct:start", new Processor() {
+            @Override
+            public void process(Exchange exchange) throws Exception {
+                exchange.getIn().setHeader(InfinispanConstants.KEY, KEY_ONE);
+                exchange.getIn().setHeader(InfinispanConstants.VALUE, VALUE_ONE);
+                exchange.getIn().setHeader(InfinispanConstants.OPERATION, InfinispanOperation.PUT);
+            }
+        });
+
+        Object value = currentCache().get(KEY_ONE);
+        assertEquals(VALUE_ONE, value.toString());
+
+        template.send("direct:start", new Processor() {
+            @Override
+            public void process(Exchange exchange) throws Exception {
+                exchange.getIn().setHeader(InfinispanConstants.KEY, KEY_TWO);
+                exchange.getIn().setHeader(InfinispanConstants.VALUE, VALUE_TWO);
+                exchange.getIn().setHeader(InfinispanConstants.OPERATION, InfinispanOperation.PUT);
+            }
+        });
+
+        value = currentCache().get(KEY_TWO);
+        assertEquals(VALUE_TWO, value.toString());
+
+        Exchange exchange;
+        exchange = template.send("direct:stats", new Processor() {
+            @Override
+            public void process(Exchange exchange) throws Exception {
+            }
+        });
+        Stats resultStats = exchange.getIn().getBody(Stats.class);
+        assertEquals(2L, resultStats.getTotalNumberOfEntries());
+    }
+
+    @Test
+    public void publishKeyAndValueByExplicitlySpecifyingTheKeyAndValueOptions() throws Exception {
+        template.send("direct:explicitput", new Processor() {
+            @Override
+            public void process(Exchange exchange) throws Exception {
+                exchange.getIn().setHeader(InfinispanConstants.OPERATION, InfinispanOperation.PUT);
+            }
+        });
+
+        Object value = currentCache().get("a");
+        assertEquals("3", value.toString());
+    }
+
+    @Test
+    public void publishKeyAndValueByExplicitlySpecifyingTheKeyAndValueOptionsHeaderHavePriorities() throws Exception {
+        template.send("direct:explicitput", new Processor() {
+            @Override
+            public void process(Exchange exchange) throws Exception {
+                exchange.getIn().setHeader(InfinispanConstants.KEY, KEY_ONE);
+                exchange.getIn().setHeader(InfinispanConstants.VALUE, VALUE_ONE);
+                exchange.getIn().setHeader(InfinispanConstants.OPERATION, InfinispanOperation.PUT);
+            }
+        });
+
+        Object value = currentCache().get(KEY_ONE);
+        assertEquals(VALUE_ONE, value.toString());
+    }
+
     @Override
     protected RouteBuilder createRouteBuilder() throws Exception {
         return new RouteBuilder() {
             @Override
             public void configure() {
                 from("direct:start")
-                        .to("infinispan://localhost?cacheContainer=#cacheContainer");
+                        .to("infinispan:default?cacheContainer=#cacheContainer");
                 from("direct:put")
-                        .to("infinispan://localhost?cacheContainer=#cacheContainer&command=PUT");
+                        .to("infinispan:default?cacheContainer=#cacheContainer&operation=PUT");
+                from("direct:put-deprecated-option")
+                        .to("infinispan:default?cacheContainer=#cacheContainer&command=PUT");
+                from("direct:put-deprecated-command")
+                        .to("infinispan:default?cacheContainer=#cacheContainer&command=CamelInfinispanOperationPut");
                 from("direct:putifabsent")
-                        .to("infinispan://localhost?cacheContainer=#cacheContainer&command=PUTIFABSENT");
+                        .to("infinispan:default?cacheContainer=#cacheContainer&operation=PUTIFABSENT");
                 from("direct:get")
-                        .to("infinispan://localhost?cacheContainer=#cacheContainer&command=GET");
+                        .to("infinispan:default?cacheContainer=#cacheContainer&operation=GET");
+                from("direct:getOrDefault")
+                        .to("infinispan:default?cacheContainer=#cacheContainer&operation=GETORDEFAULT");
                 from("direct:remove")
-                        .to("infinispan://localhost?cacheContainer=#cacheContainer&command=REMOVE");
+                        .to("infinispan:default?cacheContainer=#cacheContainer&operation=REMOVE");
                 from("direct:clear")
-                        .to("infinispan://localhost?cacheContainer=#cacheContainer&command=CLEAR");
+                        .to("infinispan:default?cacheContainer=#cacheContainer&operation=CLEAR");
                 from("direct:replace")
-                        .to("infinispan://localhost?cacheContainer=#cacheContainer&command=REPLACE");
+                        .to("infinispan:default?cacheContainer=#cacheContainer&operation=REPLACE");
                 from("direct:containskey")
-                        .to("infinispan://localhost?cacheContainer=#cacheContainer&command=CONTAINSKEY");
+                        .to("infinispan:default?cacheContainer=#cacheContainer&operation=CONTAINSKEY");
                 from("direct:containsvalue")
-                        .to("infinispan://localhost?cacheContainer=#cacheContainer&command=CONTAINSVALUE");
+                        .to("infinispan:default?cacheContainer=#cacheContainer&operation=CONTAINSVALUE");
                 from("direct:size")
-                        .to("infinispan://localhost?cacheContainer=#cacheContainer&command=SIZE");
+                        .to("infinispan:default?cacheContainer=#cacheContainer&operation=SIZE");
                 from("direct:putasync")
-                        .to("infinispan://localhost?cacheContainer=#cacheContainer&command=PUTASYNC");
+                        .to("infinispan:default?cacheContainer=#cacheContainer&operation=PUTASYNC");
                 from("direct:putallasync")
-                        .to("infinispan://localhost?cacheContainer=#cacheContainer&command=PUTALLASYNC");
+                        .to("infinispan:default?cacheContainer=#cacheContainer&operation=PUTALLASYNC");
                 from("direct:putifabsentasync")
-                        .to("infinispan://localhost?cacheContainer=#cacheContainer&command=PUTIFABSENTASYNC");
+                        .to("infinispan:default?cacheContainer=#cacheContainer&operation=PUTIFABSENTASYNC");
                 from("direct:replaceasync")
-                        .to("infinispan://localhost?cacheContainer=#cacheContainer&command=REPLACEASYNC");
+                        .to("infinispan:default?cacheContainer=#cacheContainer&operation=REPLACEASYNC");
                 from("direct:removeasync")
-                        .to("infinispan://localhost?cacheContainer=#cacheContainer&command=REMOVEASYNC");
+                        .to("infinispan:default?cacheContainer=#cacheContainer&operation=REMOVEASYNC");
+                from("direct:clearasync")
+                        .to("infinispan:default?cacheContainer=#cacheContainer&operation=CLEARASYNC");
+                from("direct:stats")
+                        .to("infinispan:default?cacheContainer=#cacheContainer&operation=STATS");
+                from("direct:compute")
+                        .to("infinispan:default?cacheContainer=#cacheContainer&operation=COMPUTE&remappingFunction=#mappingFunction");
+                from("direct:computeAsync")
+                        .to("infinispan:default?cacheContainer=#cacheContainer&operation=COMPUTEASYNC&remappingFunction=#mappingFunction");
+                from("direct:explicitput")
+                        .to("infinispan:default?cacheContainer=#cacheContainer&operation=PUT&key=a&value=3");
             }
         };
+    }
+
+    private void waitForNullValue(final String key) {
+        waitFor(new Condition() {
+            @Override
+            public boolean isSatisfied() throws Exception {
+                Exchange exchange = template.send("direct:get", new Processor() {
+                    @Override
+                    public void process(Exchange exchange) throws Exception {
+                        exchange.getIn().setHeader(InfinispanConstants.KEY, key);
+                    }
+                });
+                return exchange.getIn().getBody(String.class) == null;
+            }
+        }, 1000);
     }
 }
