@@ -1,4 +1,4 @@
-/**
+/*
  * Licensed to the Apache Software Foundation (ASF) under one or more
  * contributor license agreements.  See the NOTICE file distributed with
  * this work for additional information regarding copyright ownership.
@@ -17,72 +17,94 @@
 package org.apache.camel.component.twitter;
 
 import org.apache.camel.CamelContext;
-import org.apache.camel.ComponentConfiguration;
 import org.apache.camel.Endpoint;
-import org.apache.camel.EndpointConfiguration;
+import org.apache.camel.component.twitter.data.TimelineType;
+import org.apache.camel.component.twitter.directmessage.TwitterDirectMessageEndpoint;
+import org.apache.camel.component.twitter.search.TwitterSearchEndpoint;
+import org.apache.camel.component.twitter.timeline.TwitterTimelineEndpoint;
 import org.apache.camel.impl.DefaultCamelContext;
-import org.junit.Assert;
-import org.junit.Test;
+import org.junit.jupiter.api.Test;
 
-public class UriConfigurationTest extends Assert {
+import static org.junit.jupiter.api.Assertions.*;
+
+public class UriConfigurationTest {
+
     private CamelContext context = new DefaultCamelContext();
-
     private CamelTwitterTestSupport support = new CamelTwitterTestSupport();
 
     @Test
     public void testBasicAuthentication() throws Exception {
-        Endpoint endpoint = context.getEndpoint("twitter:todo/todo?" + support.getUriTokens());
-        assertTrue("Endpoint not a TwitterEndpoint: " + endpoint, endpoint instanceof TwitterEndpoint);
-        TwitterEndpoint twitterEndpoint = (TwitterEndpoint) endpoint;
+        Endpoint endpoint = context.getEndpoint("twitter-search:foo?" + support.getUriTokens());
+        assertTrue(endpoint instanceof TwitterSearchEndpoint, "Endpoint not a TwitterSearchEndpoint: " + endpoint);
+        TwitterSearchEndpoint twitterEndpoint = (TwitterSearchEndpoint) endpoint;
 
-        assertTrue(!twitterEndpoint.getProperties().getConsumerKey().isEmpty());
-        assertTrue(!twitterEndpoint.getProperties().getConsumerSecret().isEmpty());
-        assertTrue(!twitterEndpoint.getProperties().getAccessToken().isEmpty());
-        assertTrue(!twitterEndpoint.getProperties().getAccessTokenSecret().isEmpty());
+        assertFalse(twitterEndpoint.getProperties().getConsumerKey().isEmpty());
+        assertFalse(twitterEndpoint.getProperties().getConsumerSecret().isEmpty());
+        assertFalse(twitterEndpoint.getProperties().getAccessToken().isEmpty());
+        assertFalse(twitterEndpoint.getProperties().getAccessTokenSecret().isEmpty());
     }
-    
+
     @Test
     public void testPageSetting() throws Exception {
-        Endpoint endpoint = context.getEndpoint("twitter:todo/page?count=50&numberOfPages=2");
-        assertTrue("Endpoint not a TwitterEndpoint: " + endpoint, endpoint instanceof TwitterEndpoint);
-        TwitterEndpoint twitterEndpoint = (TwitterEndpoint) endpoint;
+        Endpoint endpoint = context.getEndpoint("twitter-search:foo?count=50&numberOfPages=2&" + support.getUriTokens());
+        assertTrue(endpoint instanceof TwitterSearchEndpoint, "Endpoint not a TwitterSearchEndpoint: " + endpoint);
+        TwitterSearchEndpoint twitterEndpoint = (TwitterSearchEndpoint) endpoint;
 
-        assertEquals(new Integer(50), twitterEndpoint.getProperties().getCount());
-        assertEquals(new Integer(2), twitterEndpoint.getProperties().getNumberOfPages());
+        assertEquals(Integer.valueOf(50), twitterEndpoint.getProperties().getCount());
+        assertEquals(Integer.valueOf(2), twitterEndpoint.getProperties().getNumberOfPages());
     }
-    
+
     @Test
     public void testHttpProxySetting() throws Exception {
-        Endpoint endpoint = context.getEndpoint("twitter:todo/todo?httpProxyHost=example.com&httpProxyPort=3338&httpProxyUser=test&httpProxyPassword=pwd");
-        assertTrue("Endpoint not a TwitterEndpoint: " + endpoint, endpoint instanceof TwitterEndpoint);
-        TwitterEndpoint twitterEndpoint = (TwitterEndpoint) endpoint;
-        
+        Endpoint endpoint = context.getEndpoint(
+                "twitter-search:foo?httpProxyHost=example.com&httpProxyPort=3338&httpProxyUser=test&httpProxyPassword=pwd&"
+                                                + support.getUriTokens());
+        assertTrue(endpoint instanceof TwitterSearchEndpoint, "Endpoint not a TwitterSearchEndpoint: " + endpoint);
+        TwitterSearchEndpoint twitterEndpoint = (TwitterSearchEndpoint) endpoint;
+
         assertEquals("example.com", twitterEndpoint.getProperties().getHttpProxyHost());
-        assertEquals(3338, twitterEndpoint.getProperties().getHttpProxyPort());
+        assertEquals(Integer.valueOf(3338), twitterEndpoint.getProperties().getHttpProxyPort());
         assertEquals("test", twitterEndpoint.getProperties().getHttpProxyUser());
         assertEquals("pwd", twitterEndpoint.getProperties().getHttpProxyPassword());
     }
-    
+
     @Test
-    public void testComponentConfiguration() throws Exception {
-        TwitterComponent comp = context.getComponent("twitter", TwitterComponent.class);
-        EndpointConfiguration conf = comp.createConfiguration("twitter:search?keywords=camel");
-
-        assertEquals("camel", conf.getParameter("keywords"));
-
-        ComponentConfiguration compConf = comp.createComponentConfiguration();
-        String json = compConf.createParameterJsonSchema();
-        assertNotNull(json);
-
-        assertTrue(json.contains("\"accessToken\": { \"kind\": \"parameter\", \"type\": \"string\""));
-        assertTrue(json.contains("\"consumerKey\": { \"kind\": \"parameter\", \"type\": \"string\""));
+    public void testDirectMessageEndpoint() throws Exception {
+        Endpoint endpoint = context.getEndpoint("twitter-directmessage:foo?" + support.getUriTokens());
+        assertTrue(endpoint instanceof TwitterDirectMessageEndpoint,
+                "Endpoint not a TwitterDirectMessageEndpoint: " + endpoint);
     }
 
     @Test
-    public void testComponentDocumentation() throws Exception {
-        CamelContext context = new DefaultCamelContext();
-        String html = context.getComponentDocumentation("twitter");
-        assertNotNull("Should have found some auto-generated HTML", html);
+    public void testSearchEndpoint() throws Exception {
+        Endpoint endpoint = context.getEndpoint("twitter-search:foo?" + support.getUriTokens());
+        assertTrue(endpoint instanceof TwitterSearchEndpoint, "Endpoint not a TwitterSearchEndpoint: " + endpoint);
     }
 
+    @Test
+    public void testTimelineEndpoint() throws Exception {
+        // set on component level instead
+        AbstractTwitterComponent twitter = context.getComponent("twitter-timeline", AbstractTwitterComponent.class);
+        twitter.setAccessToken(support.accessToken);
+        twitter.setAccessTokenSecret(support.accessTokenSecret);
+        twitter.setConsumerKey(support.consumerKey);
+        twitter.setConsumerSecret(support.consumerSecret);
+
+        Endpoint endpoint = context.getEndpoint("twitter-timeline:home");
+        assertTrue(endpoint instanceof TwitterTimelineEndpoint, "Endpoint not a TwitterTimelineEndpoint: " + endpoint);
+        TwitterTimelineEndpoint timelineEndpoint = (TwitterTimelineEndpoint) endpoint;
+        assertEquals(TimelineType.HOME, timelineEndpoint.getTimelineType());
+        endpoint = context.getEndpoint("twitter-timeline:mentions");
+        assertTrue(endpoint instanceof TwitterTimelineEndpoint, "Endpoint not a TwitterTimelineEndpoint: " + endpoint);
+        timelineEndpoint = (TwitterTimelineEndpoint) endpoint;
+        assertEquals(TimelineType.MENTIONS, timelineEndpoint.getTimelineType());
+        endpoint = context.getEndpoint("twitter-timeline:retweetsofme");
+        assertTrue(endpoint instanceof TwitterTimelineEndpoint, "Endpoint not a TwitterTimelineEndpoint: " + endpoint);
+        timelineEndpoint = (TwitterTimelineEndpoint) endpoint;
+        assertEquals(TimelineType.RETWEETSOFME, timelineEndpoint.getTimelineType());
+        endpoint = context.getEndpoint("twitter-timeline:user");
+        assertTrue(endpoint instanceof TwitterTimelineEndpoint, "Endpoint not a TwitterTimelineEndpoint: " + endpoint);
+        timelineEndpoint = (TwitterTimelineEndpoint) endpoint;
+        assertEquals(TimelineType.USER, timelineEndpoint.getTimelineType());
+    }
 }
